[package]
name = "wca_userinfo"
version = "0.1.0"
authors = ["Sean Breckenridge <seanbrecke@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iron = "0.6.*"
router = "0.6.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple-error = "0.2.1"

reqwest = { version = "0.10.4", features = ["blocking"] }
scraper = "0.11.0"
